--- a/src/app/Components/form-data/form-data.component.scss
+++ b/src/app/Components/form-data/form-data.component.scss
@@ -1,44 +1,20 @@
 .wrapper {
-  max-width: 400px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 100%;
+  margin: 24px;
 
-  .example-form {
-    margin-top: 20px;
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: 60%;
+  }
 
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
-
-    input[type="text"],
-    input[type="email"],
-    input[type="file"] {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-
-    input[type="file"] {
-      margin-bottom: 20px;
-    }
-
-    .btn-wrapper {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      button {
-        background-color: #4caf50;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-    }
+  .btn-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
