--- a/src/app/Components/table-data/table-data.component.html
+++ b/src/app/Components/table-data/table-data.component.html
@@ -1,20 +1,66 @@
-<div class="data-wrapper">
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>City</th>
-            <th>Resume</th>
-        </tr>
-        <tr *ngFor="let item of data">
-            <td>{{item.id}}</td>
-            <td>{{item.name}}</td>
-            <td>{{item.email}}</td>
-            <td>{{item.city}}</td>
-            <td><img [src]="'data:image;base64,' + item.resume" alt="resume"></td>
-        </tr>
-    </table>
-    <button (click)="toggle()">Add Data</button>
+<div class="table-wrapper">
+    <div class="top-wrapper">
+        <mat-form-field>
+            <mat-label>Filter</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+        </mat-form-field>
+
+        <div class="btn-wrapper">
+            <button (click)="toggle()" mat-raised-button style="background: #C6D3F0;">Add Data</button>
+        </div>
+    </div>
+
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+
+            <!-- ID Column -->
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+            </ng-container>
+
+            <!-- email Column -->
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+                <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+            </ng-container>
+
+            <!-- Resume Column -->
+            <ng-container matColumnDef="file">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> file </th>
+                <td mat-cell *matCellDef="let row">
+                    <img style="width: 50px; height: 50px; object-fit: contain;"
+                        [src]="'data:image;base64,' + row.resume" alt="resume">
+                </td>
+            </ng-container>
+
+            <!-- Action Column (if needed) -->
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> Action </th>
+                <td mat-cell *matCellDef="let row">
+                    <button mat-raised-button style="background: #5683b0; color: #ffffff;"
+                        download="resume">Download</button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" [attr.colspan]="displayedColumns.length">
+                    No data matching the filter "{{input.value}}"
+                </td>
+            </tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    </div>
 
 </div>
