--- a/src/app/Components/table-data/table-data.component.scss
+++ b/src/app/Components/table-data/table-data.component.scss
@@ -1,47 +1,21 @@
-.data-wrapper {
+.table-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 32px;
+  width: 90%;
   justify-content: center;
-  height: 80vh;
+  text-align: center;
 
-  table {
-    width: 80%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
+  .top-wrapper {
+    display: flex;
+    justify-content: space-between;
 
-    th,
-    td {
-      padding: 8px;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-
-      img {
-        width: 40px;
-        height: 40px;
-        object-fit: contain;
-      }
-    }
-
-    th {
-      background-color: #f2f2f2;
-    }
-
-    img {
-      max-width: 100px;
-      height: auto;
-      display: block;
-      margin: 0 auto;
+    .btn-wrapper {
+      margin: 24px 0;
     }
   }
 
-  button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  mat-form-field {
+    width: 20%;
   }
 }
