--- a/src/app/Components/form-data/form-data.component.scss
+++ b/src/app/Components/form-data/form-data.component.scss
@@ -10,6 +10,9 @@
     flex-direction: column;
     gap: 12px;
     width: 60%;
+    border: 1px solid #ccc;
+    padding: 24px;
+    border-radius: 18px;
   }
 
   .btn-wrapper {
