--- a/src/app/Components/table-data/table-data.component.html
+++ b/src/app/Components/table-data/table-data.component.html
@@ -44,15 +44,15 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef> Action </th>
                 <td mat-cell *matCellDef="let row">
-                    <button mat-raised-button style="background: #5683b0; color: #ffffff;"
-                        download="resume">Download</button>
+                    <a mat-raised-button [href]="'http://localhost:8080/employee/' + row.id + '/file'"
+                        download>Download</a>
                 </td>
             </ng-container>
+
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-            <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
                 <td class="mat-cell" [attr.colspan]="displayedColumns.length">
                     No data matching the filter "{{input.value}}"
