--- a/src/app/Components/table-data/table-data.component.html
+++ b/src/app/Components/table-data/table-data.component.html
@@ -44,8 +44,11 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef> Action </th>
                 <td mat-cell *matCellDef="let row">
-                    <a mat-raised-button [href]="'http://localhost:8080/employee/' + row.id + '/file'"
-                        download>Download</a>
+                    <div class="icon-btn-wrapper">
+                        <a mat-raised-button [href]="'http://localhost:8080/employee/' + row.id + '/file'"
+                            download><mat-icon>cloud_download</mat-icon></a>
+                        <button (click)="removeRow(row.id)" mat-raised-button><mat-icon>delete</mat-icon></button>
+                    </div>
                 </td>
             </ng-container>
 
