--- a/src/app/Components/table-data/table-data.component.scss
+++ b/src/app/Components/table-data/table-data.component.scss
@@ -18,4 +18,13 @@
   mat-form-field {
     width: 20%;
   }
+
+  .icon-btn-wrapper {
+    display: flex;
+    gap: 12px;
+  }
+}
+
+.mat-icon {
+  margin: 0 !important;
 }
