--- a/src/app/Components/table-data/table-data.component.html
+++ b/src/app/Components/table-data/table-data.component.html
@@ -48,6 +48,7 @@
                         <a mat-raised-button [href]="'http://localhost:8080/employee/' + row.id + '/file'"
                             download><mat-icon>cloud_download</mat-icon></a>
                         <button (click)="removeRow(row.id)" mat-raised-button><mat-icon>delete</mat-icon></button>
+                        <button mat-raised-button><mat-icon>edit</mat-icon></button>
                     </div>
                 </td>
             </ng-container>
