--- a/src/app/Components/table-data/table-data.component.html
+++ b/src/app/Components/table-data/table-data.component.html
@@ -47,12 +47,11 @@
                     <div class="icon-btn-wrapper">
                         <a mat-raised-button [href]="'http://localhost:8080/employee/' + row.id + '/file'"
                             download><mat-icon>cloud_download</mat-icon></a>
-                        <button (click)="removeRow(row.id)" mat-raised-button><mat-icon>delete</mat-icon></button>
-                        <button mat-raised-button><mat-icon>edit</mat-icon></button>
+                        <button (click)="openDialog(row.id)" mat-raised-button><mat-icon>delete</mat-icon></button>
+                        <button (click)="editRow(row)" mat-raised-button><mat-icon>edit</mat-icon></button>
                     </div>
                 </td>
             </ng-container>
-
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
