--- a/src/app/Components/table-data/table-data.component.html
+++ b/src/app/Components/table-data/table-data.component.html
@@ -2,7 +2,7 @@
     <div class="top-wrapper">
         <mat-form-field>
             <mat-label>Filter</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+            <input matInput (keyup)="applyFilter($event)" placeholder="search here..." #input>
         </mat-form-field>
 
         <div class="btn-wrapper">
@@ -35,8 +35,11 @@
             <ng-container matColumnDef="file">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> file </th>
                 <td mat-cell *matCellDef="let row">
-                    <img style="width: 50px; height: 50px; object-fit: contain;"
+                    <img *ngIf="row.extension === 'png' " style="width: 50px; height: 50px; object-fit: contain;"
                         [src]="'data:image;base64,' + row.resume" alt="resume">
+                    <a *ngIf="row.extension !== 'png'" mat-raised-button
+                        [href]="'http://localhost:8080/employee/' + row.id + '/file'" download>Download</a>
+                    <span *ngIf="row.extension !== 'png' ">.{{ row.extension }}</span>
                 </td>
             </ng-container>
 
