--- a/src/app/Components/table-data/table-data.component.html
+++ b/src/app/Components/table-data/table-data.component.html
@@ -35,11 +35,12 @@
             <ng-container matColumnDef="file">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> file </th>
                 <td mat-cell *matCellDef="let row">
-                    <img *ngIf="row.extension === 'png' " style="width: 50px; height: 50px; object-fit: contain;"
+                    <img *ngIf="row.extension === 'png' || row.extension === 'jpg'"
+                        style="width: 50px; height: 50px; object-fit: contain;"
                         [src]="'data:image;base64,' + row.resume" alt="resume">
-                    <a *ngIf="row.extension !== 'png'" mat-raised-button
-                        [href]="'http://localhost:8080/employee/' + row.id + '/file'" download>Download</a>
-                    <span *ngIf="row.extension !== 'png' ">.{{ row.extension }}</span>
+                    <a *ngIf="row.extension !== 'png' && row.extension !== 'jpg'" mat-raised-button
+                        [href]="'http://localhost:8080/employee/' + row.id + '/file'" download>Download <span
+                            *ngIf="row.extension !== 'png' && row.extension !== 'jpg'">.{{ row.extension }}</span></a>
                 </td>
             </ng-container>
 
@@ -61,7 +62,7 @@
 
             <tr class="mat-row" *matNoDataRow>
                 <td class="mat-cell" [attr.colspan]="displayedColumns.length">
-                    No data matching the filter "{{input.value}}"
+                    Loading...
                 </td>
             </tr>
         </table>
